2008-02-06  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in: Default to --without-64-calls for
	powerpc-ibm-aix*.  Thanks to Rainer Tammer for reporting that the
	64 calls are a problem on that OS.

2008-02-06  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention Sun Studio compilation fix.

2008-02-05  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in (--without-64-calls): New option.

2008-01-30  Neil Jerram  <neil@ossau.uklinux.net>

	* pre-inst-guile.in (dyld_prefix), pre-inst-guile-env.in
	(dyld_prefix): Construct and export dyld_prefix in a similar way
	to ltdl_prefix, to allow pre-install dynamic linking to work on
	MacOS.  Thanks to Roger Mc Murtrie for reporting this problem.

2008-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* README: Should say version 1.8.3, not 1.8.2.

	* LICENSE: Change COPYING.LIB to COPYING.LESSER.

	* COPYING.LESSER: Renamed, previously COPYING.LIB.

	* COPYING: Removed.

	* libguile.h: Update copyright statement to LGPL.

2007-12-04  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention `accept' and `scm_c_{read,write}' bug fixes.

2007-12-03  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Add SRFI-69.

2007-10-17  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention reader bug-fix.

2007-10-16  Ludovic Courtès  <ludo@gnu.org>

	Guile 1.8.3 released.

	* GUILE-VERSION (GUILE_MICRO_VERSION): Incremented.
	(LIBGUILE_INTERFACE_REVISION): Incremented.

2007-10-10  Ludovic Courtès  <ludo@gnu.org>

	* configure.in (SCM_I_GSC_NEED_BRACES_ON_PTHREAD_ONCE_INIT):
	New substituted variable.
	Use `-Werror' when using GCC and checking for
	`PTHREAD_ONCE_INIT'.  Add check for braces around
	`PTHREAD_MUTEX_INITIALIZER'.
	* NEWS: Mention build fix for IRIX.

2007-10-02  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention `(ice-9 slib)' fix and threading fix.

2007-09-03  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention alignment-related bug fixes.

2007-09-03  Kevin Ryde  <user42@zip.com.au>

	* configure.in (AC_CHECK_FUNCS): Add clog and cexp.
